# rust-i18n

./: Cargo.toml  README.md
crates/extract/: Cargo.toml
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/support/: Cargo.toml
crates/support/src/: backend.rs  lib.rs
src/: config.rs  error.rs  lib.rs  main.rs
tests/: Cargo.toml
tests/locales/: en-US.yml  tr-TR.yml
tests/src/: backend.rs  main.rs
