[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
build = "build.rs"
categories = ["localization", "internationalization"]
description = "Rust I18n is use Rust codegen for load YAML file storage translations on compile time, and give you a t! macro for simply get translation texts."
edition = "2021"
exclude = ["crates", "tests"]
keywords = ["i18n", "yml", "localization", "internationalization"]
license = "MIT"
name = "rust-i18n"
readme = "README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "2.0.1-x"

[dependencies]
rust-i18n-extract = {path = "./crates/extract", optional = true}
rust-i18n-support = {path = "./crates/support"}
rust-i18n-macros = {path = "./crates/macros"}
anyhow = {version = "1", optional = true}
clap = {version = "4.3", optional = true, features = ["cargo"]}
itertools = {version = "0.12", optional = true}
once_cell = "1.10.0"
quote = {version = "1", optional = true}
serde = "1"
serde_derive = "1"
toml = "0.8"
thiserror = "1"

[dev-dependencies]
criterion = "0.5"
lazy_static = "1"

[features]
default = ["rust-i18n-extract", "clap", "anyhow", "quote", "itertools"]

[build-dependencies]
globwalk = "0.9"
regex = "1"

[[bin]]
name = "cargo-i18n"
path = "src/main.rs"
required-features = ["default"]

[workspace]
members = [
    "crates/extract",
    "crates/support",
    "crates/macros",
    "tests"
]